[gd_scene load_steps=20 format=3]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://ccak1tbutig5y" path="res://assets/characters/sean_spritesheet.png" id="2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1"]
atlas = ExtResource("2")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2"]
atlas = ExtResource("2")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3"]
atlas = ExtResource("2")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4"]
atlas = ExtResource("2")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5"]
atlas = ExtResource("2")
region = Rect2(0, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6"]
atlas = ExtResource("2")
region = Rect2(16, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7"]
atlas = ExtResource("2")
region = Rect2(32, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8"]
atlas = ExtResource("2")
region = Rect2(48, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_9"]
atlas = ExtResource("2")
region = Rect2(0, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_10"]
atlas = ExtResource("2")
region = Rect2(16, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_11"]
atlas = ExtResource("2")
region = Rect2(32, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_12"]
atlas = ExtResource("2")
region = Rect2(48, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_13"]
atlas = ExtResource("2")
region = Rect2(0, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_14"]
atlas = ExtResource("2")
region = Rect2(16, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_15"]
atlas = ExtResource("2")
region = Rect2(32, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_16"]
atlas = ExtResource("2")
region = Rect2(48, 96, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1")
}],
"loop": true,
"name": "idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5")
}],
"loop": true,
"name": "idle_up", 
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_9")
}],
"loop": true,
"name": "idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_13")
}],
"loop": true,
"name": "idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4")
}],
"loop": true,
"name": "walk_down",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8")
}],
"loop": true,
"name": "walk_up",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_9")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12")
}],
"loop": true,
"name": "walk_left",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_13")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_16")
}],
"loop": true,
"name": "walk_right",
"speed": 8.0
}]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_1")
animation = "idle_down"
offset = Vector2(0, -16)

[node name="PlaceholderSprite" type="ColorRect" parent="."]
visible = false
offset_left = -24.0
offset_top = -48.0
offset_right = 24.0
offset_bottom = 48.0
color = Color(0.2, 0.5, 0.8, 1)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)
enabled = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="StatsDisplay" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = -10.0

[node name="HealthLabel" type="Label" parent="UI/StatsDisplay"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 20.0
text = "Health: 50"

[node name="SocialLabel" type="Label" parent="UI/StatsDisplay"]
layout_mode = 0
offset_top = 25.0
offset_right = 100.0
offset_bottom = 45.0
text = "Social: 50"

[node name="CCATLabel" type="Label" parent="UI/StatsDisplay"]
layout_mode = 0
offset_top = 50.0
offset_right = 100.0
offset_bottom = 70.0
text = "CCAT Score: 50"

[node name="NameLabel" type="Label" parent="."]
offset_left = -25.0
offset_top = -60.0
offset_right = 25.0
offset_bottom = -40.0
text = "Sean"
horizontal_alignment = 1 